--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
@@ -33,6 +34,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.17",
     "ng2-daterangepicker": "^2.0.12",
+    "ng6-toastr-notifications": "^1.0.4",
     "ngx-pipes": "^2.4.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
