--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run start --prefix server",
-    "start-dev" : "ng serve --proxy-config proxy.conf.json",
+    "start-dev": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
-    "heroku-postbuild" : "npm run build",
+    "heroku-postbuild": "npm run build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -18,16 +18,20 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
+    "@angular-material-extensions/google-maps-autocomplete": "^1.4.0",
     "@angular/animations": "~7.1.0",
+    "@angular/cdk": "^7.3.6",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.3.6",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@auth0/angular-jwt": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "@types/google-maps": "^3.2.0",
     "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
@@ -52,9 +56,10 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
+    "@types/googlemaps": "^3.30.19",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
